--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,14 +115,31 @@
             android:layout_margin="5dp"/>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/resetBtn"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
-        android:backgroundTint="#0bded7"
-        android:padding="15dp"
-        android:text="Restart" />
+        android:layout_gravity="center">
+        <Button
+            android:id="@+id/resetBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:backgroundTint="#0bded7"
+            android:layout_weight="1"
+            android:padding="15dp"
+            android:text="Reset" />
+        <Button
+            android:id="@+id/restartBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:backgroundTint="#0bded7"
+            android:layout_weight="1"
+            android:padding="15dp"
+            android:text="Restart" />
+    </LinearLayout>
+
 
 </LinearLayout>
